# dna-viz

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/opengl/: engine.cpp  engine.h  geometryengine.cpp  geometryengine.h
src/opengl/new_resources/shaders/: fshader.glsl
src/opengl/resources/: opengl.qrc
src/opengl/resources/shaders/: fshader.glsl  vshader.glsl
src/qt/: mainwindow.cpp  mainwindow.h  utilities.cpp  utilities.h  viewer.cpp  viewer.h
